src/styles.scss
/* ... */
#overlay.active .modal.small {
  height: auto;
  min-width: 900px;
}

//mobile queries

//@media (min-width: 500px) { 
  .container {
    .wrapper {
      .tabs {
        button {
          width: 100px;
        }
        select {
          background: #303030;
          padding: 5px;
          // border: none!important;
          appearance: none!important;
          -webkit-appearance: none;
          -webkit-border-radius: 0;
          border-radius: 0;
          background-image: url("data:image/svg+xml;utf8,<svg fill='pink' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
          background-position: 100% 50%;
          background-repeat: no-repeat;
          width: 102px;
          color: #E5B4D5;
          text-transform: uppercase;
          font-size: 32px;
          border-bottom: 2px solid #E5B4D5;
          border-top: none;
          border-left: none;
          border-right: none;
          font-family: Roboto, Arial, sans-serif;
          font-weight: 200;
          margin: 20px;
        }
        select#cat {
          width: 142px;
        }
      }
    }
  }
//}

@media (max-width: 900px) { 
  .my-container .item .bg .info {
    padding: 0 8px;
  }
  // #overlay.active {
  //   .modal {
  //     height: 400px;
  //     min-width: 600px;
  //   }
  // }
  #snackbar {
    left: 50%;
  }
  #overlay.active .modal.small {
    min-width: 100%;
  }
}
@media (max-width: 600px) {
  .container .wrapper .genres span.btn {
    font-size: 9px;
    width: 43px;
  }

  .my-container .item {
    flex: 0 0 42%;
  }

  .container {
    .wrapper {
      .tabs {
        select {
          font-size: 20px;
        }
        select#cat {
          width: 102px;
        }
      }
    }
  }

  .more-btn, .pro-title {
    margin-top: 20px;
  }

  #overlay.active {
    .modal {
      iframe {
        width: 450px;
      }
    }
    .trailer-modal {
      .content {  
        .col-trailer {
          flex: 0 0 100%;
        }
        .col-overview {
          flex: 0 0 100%;
        }
      }
    }
  }
}

@media (max-width: 500px) { 
  input[type="search"] {
    right: 15px;
    font-size: 16px;
  }
  .row .rec-title {
    font-size: 16px;
  }
  .mobile-menu {
    .title {
      float: right;
      margin: 27px 10px 0 0;
      font-size: 14px;
      font-weight: 100;
    }

    .mobile-list {
      position: absolute;
      top: 44px;
      right: 0;
      background: #fff;
      color: #222;
      z-index: 3;
      list-style: none;
      text-align: center;
      width: 100px;
      padding: 5px 10px;
    }

    .mobile-list li {
      margin-bottom: 5px;
    }

    .mobile-list li:hover,
    .mobile-list li.active {
      color: #444;
      border: 1px solid #444;
    }
  }
  // #overlay.active {
  //   .modal {
  //     height: 400px;
  //     min-width: 400px;
  //     iframe {
  //       width: 400px;
  //     }
  //   }
  // }

  #overlay.active .modal #top {
    height: auto;
  }

  #overlay.active .modal .row .col {
    flex: 0 0 60%;
  }

  // .row .col.related-col .item .bg .probar {
  //   bottom: 90%;
  // }

  .page-container {
    width: 100%;
  }

  footer {
    .row {
      .col {
        font-size: 10px;
        padding: 5px 0 5px 0;
        img {
          width: 15%;
        }
      }
    }
  }

  footer .row .logo-col .logo-link {
    font-size: 16px;
  }

  .container {
      .wrapper {
        .genres {
          span {
            width: 45px;
            margin: 2px;
          }
        }
      }
  }

  // .row .col.related-col .item .bg {
  //   height: 150px;
  // }

  .slide-container .bg .item-row .fav-star {
    right: 12px;
  }

  .my-container .item .bg .info {
    width: 90%
  }

  .my-container .item .bg {
    height: 250px;
  }

  #overlay.active .modal .modal-header .header-title {
    font-size: 16px;
  }

  .container .wrapper .genres span.btn {
    margin: 1px;
  }

  // .row .col.related-col .item:hover .info p {
  //   font-size: 8px;
  // }
}

// @media (max-width: 400px) { 
//   #overlay.active {
//     .modal {
//       height: 400px;
//       min-width: 300px;
//       iframe {
//         width: 350px;
//       }
//     }
//   }
// }


// new slider feature

:root {
  --movie-width: 15.5vw;
  --movie-height: 250px;
  --arrow-width: 50px;
  --slider-py: 60px;
}
@media only screen and (max-width: 1000px) {
  :root {
    --movie-width: 25vw;
  }
}
/*
*
* THE SLIDER CONTAINER
*
*********************************/
.my-slider {
  width: 100%;
  overflow-x: scroll;
  overflow-y: visible;
  // white-space: nowrap;
  position: relative;
  padding-top: var(--slider-py);
  padding-bottom: var(--slider-py);
  border-bottom: 1px solid pink;
}
/*
*
* SLIDER INDICATORS
*
*********************************/
.container-indicators {
  width: 100px;
  position: absolute;
  right: 0;
  top: calc(var(--slider-py) - 60px);
  visibility: hidden;
}
.indicator {
  width: 15px;
  height: 2px;
  background-color: grey;
  display: inline-block;
}
.indicator.active {
  background-color: white;
}

/*
*
* MOVIE ELEMENTS!
*
*********************************/
// .my-movie {
//   // width: var(--movie-width);
//   // height: var(--movie-height);
//   // display: inline-block;
//   // position: relative;
//   // color: white;
//   // padding: 0 2px;
//   // font-size: 0.8rem;
//   // transition: all 0.8s ease-in-out;
// }
.my-movie:nth-of-type(1) {
  margin-left: var(--arrow-width);
  // margin-right: var(--arrow-width);
  display: flex;
}
/* ... */

